--- a/css/index.css
+++ b/css/index.css
@@ -6,11 +6,36 @@
 }
 
 .imageProfile{
-    width: 150px;
+    width: 300px;
+    height: 300px;
+    border-radius: 10%;
+    transition: transform 0.5s ease;
+}
+
+.imageProfile:hover {
+    transform: scale(1.2);
 }
 
 
-#fotoPefil1 {
-    width: 100px;
-    height: 50px;
+.aboutUs {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.aboutUsJeni{
+    display: flex;
+    justify-content: center;
+    padding: 3%;
+}
+
+.aboutUsInma{
+    display: flex;
+    justify-content: center;
+    padding: 3%;
+}
+
+p {
+    width: 30%;
+    padding: 3%;
 }
