--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,37 @@
-.header {
-    background-color: rgba(115, 234, 255, 0.598);
+header {
+
+
     width: 100;
+    height: 200px;
     padding: 5rem;
     text-align: center;
+    background-image: url("../img/banner.jpg");
 }
+
+
+ h1{
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: aliceblue;
+    font-size: 60px;
+    text-align: center;
+ }
+
+
+ .anchors{
+    width: 60%;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    justify-content: space-between;
+ }
+
+
+ a{
+    background-color: aquamarine;
+    width: 20%;
+    height: 20%;
+ }
+
 
 .imageProfile{
     width: 300px;
@@ -12,8 +40,9 @@
     transition: transform 0.5s ease;
 }
 
+
 .imageProfile:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
 
@@ -23,11 +52,13 @@
     flex-direction: column;
 }
 
+
 .aboutUsJeni{
     display: flex;
     justify-content: center;
     padding: 3%;
 }
+
 
 .aboutUsInma{
     display: flex;
@@ -35,7 +66,9 @@
     padding: 3%;
 }
 
+
 p {
     width: 30%;
     padding: 3%;
+    font-size: 20px;
 }
