add css to pets

--- a/css/index.css
+++ b/css/index.css
@@ -130,3 +130,21 @@ p {
 .pHobbies {
   width: 100%;
 }
+
+.petNina{
+display: flex;
+flex-direction: column;
+background-color: rgb(23, 52, 111);
+width: 500px;
+height: 500px;
+}
+
+#photoNina{
+  width: 300px;
+  height: 300px;
+
+}
+
+#pNina{
+  font-size: 15px;
+}
